--- a/app/views/event_logs/edit.html.erb
+++ b/app/views/event_logs/edit.html.erb
@@ -1,10 +1,11 @@
 <% content_for :title, "Editing event log" %>
 
 <div class="md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">Editing event log</h1>
+  <%= render "shared/breadcrumbs", items: [
+    { label: "Event Logs", path: event_logs_path },
+    { label: "Event Log ##{@event_log.id}", path: event_log_path(@event_log) },
+    { label: "Edit" }
+  ] %>
 
   <%= render "form", event_log: @event_log %>
-
-  <%= link_to "Show this event log", @event_log, class: "w-full sm:w-auto text-center mt-2 sm:mt-0 sm:ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
-  <%= link_to "Back to event logs", event_logs_path, class: "w-full sm:w-auto text-center mt-2 sm:mt-0 sm:ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
 </div>
