--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,6 @@
 <div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
   <div class="px-4 py-6 sm:px-0">
-    <div class="flex justify-between items-center">
+    <div class="flex justify-between items-center mb-6">
       <%= render "shared/breadcrumbs", items: [
         { label: "Events", path: events_path },
         { label: @event.name }
