--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -103,7 +103,6 @@
               <div class="flex-grow">
                 <%= render "shared/combobox",
                     name: "mentee_id",
-                    label: "Select Mentee",
                     options: @available_mentees_for_mentor.map { |m| ["#{m.user.first_name} #{m.user.last_name} (#{m.user.email})", m.id] },
                     placeholder: "Search mentees..." %>
               </div>
@@ -198,7 +197,7 @@
               <div class="flex-grow">
                 <%= render "shared/combobox",
                     name: "guardian_user_id",
-                    label: "Select Existing Guardian",
+                    label: "Select Guardian",
                     options: @available_guardians_for_family.map { |g| ["#{g.user.first_name} #{g.user.last_name} (#{g.user.email})", g.user.id] },
                     placeholder: "Search guardians..." %>
               </div>
