--- a/app/views/event_types/show.html.erb
+++ b/app/views/event_types/show.html.erb
@@ -7,7 +7,7 @@
       ] %>
       <div class="flex space-x-4">
         <%= link_to "Edit", edit_event_type_path(@event_type), class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200" %>
-        <%= button_to "Delete Event Type", event_type_path(@event_type), method: :delete, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-red-600 hover:bg-red-700", data: { confirm: "Are you sure?" } %>
+        <%= button_to "Delete Event Type", event_type_path(@event_type), method: :delete, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-red-600 hover:bg-red-700", data: { turbo_confirm: "Are you sure?" } %>
       </div>
     </div>
 
