--- a/app/views/mentees/index.html.erb
+++ b/app/views/mentees/index.html.erb
@@ -76,7 +76,7 @@
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
                     <%= link_to "View", mentee_path(mentee), class: "text-indigo-600 hover:text-indigo-900 mr-4" %>
-                    <%= button_to "Remove", mentee_path(mentee), method: :delete, class: "text-red-600 hover:text-red-900", form: { class: "inline" }, data: { confirm: "Are you sure you want to remove this mentee?" } %>
+                    <%= button_to "Remove", mentee_path(mentee), method: :delete, class: "text-red-600 hover:text-red-900", form: { class: "inline" }, data: { turbo_confirm: "Are you sure you want to remove this mentee?" } %>
                   </td>
                 </tr>
               <% end %>
