--- a/app/views/mentees/show.html.erb
+++ b/app/views/mentees/show.html.erb
@@ -18,7 +18,7 @@
           </li>
         </ol>
       </nav>
-      <%= button_to "Remove from My Mentees", mentee_path(@mentee), method: :delete, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-red-600 hover:bg-red-700", data: { confirm: "Are you sure you want to remove this mentee?" } %>
+      <%= button_to "Remove from My Mentees", mentee_path(@mentee), method: :delete, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-red-600 hover:bg-red-700", data: { turbo_confirm: "Are you sure you want to remove this mentee?" } %>
     </div>
 
     <div class="bg-white shadow overflow-hidden sm:rounded-lg">
