--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -11,7 +11,7 @@
             <%= link_to "Edit", edit_team_path(@team), class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200" %>
           <% end %>
           <% if current_user.can?(:delete, :teams) %>
-            <%= button_to "Delete Team", team_path(@team), method: :delete, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-red-600 hover:bg-red-700", data: { confirm: "Are you sure?" } %>
+            <%= button_to "Delete Team", team_path(@team), method: :delete, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-red-600 hover:bg-red-700", data: { turbo_confirm: "Are you sure?" } %>
           <% end %>
         </div>
       <% end %>
@@ -169,7 +169,7 @@
                         </td>
                         <% if current_user.can?(:manage_members, :teams) %>
                           <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                            <%= button_to "Remove", remove_member_team_path(@team, mentee_id: mentee_point[:mentee].id), method: :delete, class: "text-red-600 hover:text-red-900", data: { confirm: "Remove #{mentee_point[:user].email} from this team?" }, form: { class: "inline" } %>
+                            <%= button_to "Remove", remove_member_team_path(@team, mentee_id: mentee_point[:mentee].id), method: :delete, class: "text-red-600 hover:text-red-900", data: { turbo_confirm: "Remove #{mentee_point[:user].email} from this team?" }, form: { class: "inline" } %>
                           </td>
                         <% end %>
                       </tr>
