--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -245,7 +245,7 @@
         <div class="mt-6 flex justify-end space-x-3">
           <%= link_to "Cancel", user_path(@user), class: "inline-flex justify-center py-2 px-4 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50" %>
           <% if @can_delete %>
-            <%= button_to "Delete User", user_path(@user), method: :delete, class: "inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-red-600 hover:bg-red-700", data: { confirm: "Are you sure?" } %>
+            <%= button_to "Delete User", user_path(@user), method: :delete, class: "inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-red-600 hover:bg-red-700", data: { turbo_confirm: "Are you sure?" } %>
           <% end %>
           <%= form.submit "Save Changes", class: "inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700" %>
         </div>
