--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,19 +7,19 @@
       ] %>
       <div class="flex space-x-4">
         <%= link_to "Edit", edit_user_path(@user), class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200" %>
-        <%= button_to "Reset Password", reset_password_user_path(@user), method: :post, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-amber-600 hover:bg-amber-700", data: { confirm: "Send password reset email to #{@user.email}?" } %>
+        <%= button_to "Reset Password", reset_password_user_path(@user), method: :post, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-amber-600 hover:bg-amber-700", data: { turbo_confirm: "Send password reset email to #{@user.email}?" } %>
         <% if real_current_user.admin? && @user != real_current_user %>
           <%= button_to "Spoof User", spoof_path(@user), method: :post, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-yellow-500 hover:bg-yellow-600" %>
         <% end %>
         <% if @can_activate_deactivate %>
           <% if @user.active? %>
-            <%= button_to "Deactivate", deactivate_user_path(@user), method: :patch, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-orange-600 hover:bg-orange-700", data: { confirm: "Are you sure?" } %>
+            <%= button_to "Deactivate", deactivate_user_path(@user), method: :patch, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-orange-600 hover:bg-orange-700", data: { turbo_confirm: "Are you sure?" } %>
           <% else %>
             <%= button_to "Activate", activate_user_path(@user), method: :patch, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-green-600 hover:bg-green-700" %>
           <% end %>
         <% end %>
         <% if @can_delete %>
-          <%= button_to "Delete User", user_path(@user), method: :delete, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-red-600 hover:bg-red-700", data: { confirm: "Are you sure?" } %>
+          <%= button_to "Delete User", user_path(@user), method: :delete, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-red-600 hover:bg-red-700", data: { turbo_confirm: "Are you sure?" } %>
         <% end %>
       </div>
     </div>
@@ -155,7 +155,7 @@
                         </td>
                         <% if @can_manage_mentees %>
                           <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                            <%= button_to "Remove", remove_mentee_user_path(@user, mentee_id: mentee.id), method: :delete, class: "text-red-600 hover:text-red-900", data: { confirm: "Are you sure you want to remove this mentee from this mentor?" } %>
+                            <%= button_to "Remove", remove_mentee_user_path(@user, mentee_id: mentee.id), method: :delete, class: "text-red-600 hover:text-red-900", data: { turbo_confirm: "Are you sure you want to remove this mentee from this mentor?" } %>
                           </td>
                         <% end %>
                       </tr>
@@ -300,7 +300,7 @@
                         </td>
                         <% if @can_manage_family_members %>
                           <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                            <%= button_to "Remove", remove_family_member_user_path(@user, family_member_id: family_member.id), method: :delete, class: "text-red-600 hover:text-red-900", data: { confirm: "Are you sure you want to remove this guardian?" } %>
+                            <%= button_to "Remove", remove_family_member_user_path(@user, family_member_id: family_member.id), method: :delete, class: "text-red-600 hover:text-red-900", data: { turbo_confirm: "Are you sure you want to remove this guardian?" } %>
                           </td>
                         <% end %>
                       </tr>
