--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,7 @@
               <div class="relative flex h-20 shrink-0 items-center py-4">
                 <%= image_tag "ha-icon.png", alt: "High Aspirations", class: "w-auto", style: "height: 52px;" %>
               </div>
+              <%= render "shared/season_selector" %>
               <nav class="relative flex flex-1 flex-col overflow-y-auto">
                 <ul role="list" class="flex flex-1 flex-col gap-y-7">
                   <li>
@@ -179,6 +180,7 @@
         <div class="flex h-20 shrink-0 items-center py-4">
           <%= image_tag "ha-icon.png", alt: "High Aspirations", class: "w-auto", style: "height: 52px;" %>
         </div>
+        <%= render "shared/season_selector" %>
         <nav class="flex flex-1 flex-col overflow-y-auto">
           <ul role="list" class="flex flex-1 flex-col gap-y-7">
             <li>
