--- a/app/views/mentees/index.html.erb
+++ b/app/views/mentees/index.html.erb
@@ -57,7 +57,9 @@
               <% @mentees.each do |mentee| %>
                 <tr>
                   <td class="px-6 py-4 whitespace-nowrap">
-                    <div class="text-sm font-medium text-gray-900"><%= mentee.user.first_name %> <%= mentee.user.last_name %></div>
+                    <div class="text-sm font-medium text-gray-900">
+                      <%= link_to "#{mentee.user.first_name} #{mentee.user.last_name}".strip, user_path(mentee.user), class: "text-indigo-600 hover:text-indigo-900" %>
+                    </div>
                     <div class="text-sm text-gray-500"><%= mentee.user.email %></div>
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap">
@@ -75,7 +77,7 @@
                     </span>
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                    <%= link_to "View", mentee_path(mentee), class: "text-indigo-600 hover:text-indigo-900 mr-4" %>
+                    <%= link_to "View", user_path(mentee.user), class: "text-indigo-600 hover:text-indigo-900 mr-4" %>
                     <%= button_to "Remove", mentee_path(mentee), method: :delete, class: "text-red-600 hover:text-red-900", form: { class: "inline" }, data: { turbo_confirm: "Are you sure you want to remove this mentee?" } %>
                   </td>
                 </tr>
