--- a/app/views/olympic_seasons/index.html.erb
+++ b/app/views/olympic_seasons/index.html.erb
@@ -37,7 +37,9 @@
                   <% @olympic_seasons.each do |season| %>
                     <tr>
                       <td class="px-6 py-4 whitespace-nowrap">
-                        <div class="text-sm font-medium text-gray-900"><%= season.name %></div>
+                        <div class="text-sm font-medium text-gray-900">
+                          <%= link_to season.name, olympic_season_path(season), class: "text-indigo-600 hover:text-indigo-900" %>
+                        </div>
                       </td>
                       <td class="px-6 py-4 whitespace-nowrap">
                         <div class="text-sm text-gray-900">
