--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -39,7 +39,9 @@
                   <% @teams.each do |team| %>
                     <tr>
                       <td class="px-6 py-4 whitespace-nowrap">
-                        <div class="text-sm font-medium text-gray-900"><%= team.name %></div>
+                        <div class="text-sm font-medium text-gray-900">
+                          <%= link_to team.name, team_path(team), class: "text-indigo-600 hover:text-indigo-900" %>
+                        </div>
                       </td>
                       <td class="px-6 py-4 whitespace-nowrap">
                         <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-blue-100 text-blue-800">
