--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -135,7 +135,7 @@
                     </div>
 
                     <div class="col-span-6">
-                      <%= button_to "Send Password Reset Email", reset_password_user_path(@user), method: :post, class: "inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50", form: { class: "inline" } %>
+                      <%= link_to "Send Password Reset Email", reset_password_user_path(@user), data: { turbo_method: :post }, class: "inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50" %>
                       <p class="mt-2 text-xs text-gray-500">Send an email allowing the user to set their own password.</p>
                     </div>
                   <% end %>
@@ -184,56 +184,22 @@
 
                   <!-- Mentee Fields -->
                   <div class="col-span-6 sm:col-span-4" data-role-form-target="menteeFields" style="<%= @current_role == 'mentee' ? '' : 'display: none;' %>">
-                    <label for="mentee_team_id" class="block text-sm font-medium text-gray-700">Team</label>
-                    <select name="mentee[team_id]" id="mentee_team_id" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
-                      <option value="">No team assigned</option>
-                      <% @teams&.each do |team| %>
-                        <option value="<%= team.id %>" <%= "selected" if @user.mentee&.team_id == team.id %>><%= team.name %></option>
-                      <% end %>
-                    </select>
-                  </div>
-
-                  <div class="col-span-6 sm:col-span-4" data-role-form-target="menteeFields" style="<%= @current_role == 'mentee' ? '' : 'display: none;' %>">
-                    <label for="mentee_mentor_id" class="block text-sm font-medium text-gray-700">Mentor</label>
-                    <select name="mentee[mentor_id]" id="mentee_mentor_id" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
-                      <option value="">No mentor assigned</option>
-                      <% @mentors&.each do |mentor| %>
-                        <option value="<%= mentor.id %>" <%= "selected" if @user.mentee&.mentor_id == mentor.id %>><%= mentor.user.first_name %> <%= mentor.user.last_name %></option>
-                      <% end %>
-                    </select>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        <% end %>
-
-        <% if @user.mentee.present? && @can_edit_profile %>
-          <div class="mt-6 bg-white shadow px-4 py-5 sm:rounded-lg sm:p-6">
-            <div class="md:grid md:grid-cols-3 md:gap-6">
-              <div class="md:col-span-1">
-                <h3 class="text-lg font-medium leading-6 text-gray-900">Mentee Information</h3>
-                <p class="mt-1 text-sm text-gray-500">Assign a team and mentor for this mentee.</p>
-              </div>
-              <div class="mt-5 md:mt-0 md:col-span-2">
-                <div class="grid grid-cols-6 gap-6">
-                  <div class="col-span-6 sm:col-span-3">
                     <%= render "shared/combobox",
                         name: "mentee[team_id]",
                         label: "Team",
-                        options: @teams.map { |t| [t.name, t.id] },
-                        selected_value: @user.mentee.team_id,
-                        selected_text: @user.mentee.team&.name,
+                        options: @teams&.map { |t| [t.name, t.id] } || [],
+                        selected_value: @user.mentee&.team_id,
+                        selected_text: @user.mentee&.team&.name,
                         placeholder: "Search teams..." %>
                   </div>
 
-                  <div class="col-span-6 sm:col-span-3">
+                  <div class="col-span-6 sm:col-span-4" data-role-form-target="menteeFields" style="<%= @current_role == 'mentee' ? '' : 'display: none;' %>">
                     <%= render "shared/combobox",
                         name: "mentee[mentor_id]",
                         label: "Mentor",
-                        options: @mentors.map { |m| ["#{m.user.first_name} #{m.user.last_name} (#{m.user.email})", m.id] },
-                        selected_value: @user.mentee.mentor_id,
-                        selected_text: @user.mentee.mentor ? "#{@user.mentee.mentor.user.first_name} #{@user.mentee.mentor.user.last_name} (#{@user.mentee.mentor.user.email})" : nil,
+                        options: @mentors&.map { |m| ["#{m.user.first_name} #{m.user.last_name} (#{m.user.email})", m.id] } || [],
+                        selected_value: @user.mentee&.mentor_id,
+                        selected_text: @user.mentee&.mentor ? "#{@user.mentee.mentor.user.first_name} #{@user.mentee.mentor.user.last_name} (#{@user.mentee.mentor.user.email})" : nil,
                         placeholder: "Search mentors..." %>
                   </div>
                 </div>
@@ -245,9 +211,9 @@
         <div class="mt-6 flex justify-end space-x-3">
           <%= link_to "Cancel", user_path(@user), class: "inline-flex justify-center py-2 px-4 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50" %>
           <% if @can_delete %>
-            <%= button_to "Delete User", user_path(@user), method: :delete, class: "inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-red-600 hover:bg-red-700", data: { turbo_confirm: "Are you sure?" } %>
+            <%= link_to "Delete User", user_path(@user), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-red-600 hover:bg-red-700" %>
           <% end %>
-          <%= form.submit "Save Changes", class: "inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700" %>
+          <%= form.submit "Save Changes", class: "inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 cursor-pointer" %>
         </div>
       <% end %>
     <% end %>
