--- a/app/views/media/_medium.html.erb
+++ b/app/views/media/_medium.html.erb
@@ -1,6 +1,15 @@
 <%= link_to medium_path(medium), class: "group block" do %>
   <div class="aspect-square overflow-hidden rounded-lg bg-gray-100 relative">
     <%= image_tag medium.thumbnail_url, alt: medium.alt_text || medium.filename, class: "h-full w-full object-cover object-center group-hover:opacity-75 transition-opacity" %>
+    <% if medium.video? %>
+      <div class="absolute inset-0 flex items-center justify-center">
+        <div class="bg-black/50 rounded-full p-3">
+          <svg class="w-8 h-8 text-white" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M8 5v14l11-7z" />
+          </svg>
+        </div>
+      </div>
+    <% end %>
     <% if medium.in_use? %>
       <div class="absolute top-2 right-2">
         <span class="inline-flex items-center rounded-full bg-green-100 px-2 py-1 text-xs font-medium text-green-700">
